[workspace]
members = [
    "crates/*",
    "ui-crates/*",
]

default-members = ["crates/engine"]
exclude = ["examples/bevy-integration"]
resolver = "2"

###################################
# Profiles
###################################

[profile.release]
debug = true

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

###################################
# Workspace Dependencies
###################################

[workspace.dependencies]

# ---------- GPUI (Zed fork) ----------
gpui           = { git = "https://github.com/tristanpoland/zed", rev = "2047043a00dc138e3d8127c8921c96927acea8f8", features = ["runtime_shaders", "macos-blade"] }
gpui_macros    = { git = "https://github.com/tristanpoland/zed", rev = "2047043a00dc138e3d8127c8921c96927acea8f8" }
reqwest_client = { git = "https://github.com/tristanpoland/zed", rev = "2047043a00dc138e3d8127c8921c96927acea8f8" }
sum_tree       = { git = "https://github.com/tristanpoland/zed", rev = "2047043a00dc138e3d8127c8921c96927acea8f8" }

# ---------- Local Overrides (uncomment to use) ----------
# gpui = { path = "C:/Users/redst/OneDrive/Documents/GitHub/gpui-ce/crates/gpui", features = ["runtime_shaders", "macos-blade"] }
# gpui_macros = { path = "C:/Users/redst/OneDrive/Documents/GitHub/gpui-ce/crates/gpui_macros" }
# reqwest_client = { path = "C:/Users/redst/OneDrive/Documents/GitHub/gpui-ce/crates/reqwest_client" }
# sum_tree = { path = "C:/Users/redst/OneDrive/Documents/GitHub/gpui-ce/crates/sum_tree" }

# ---------- WGPUI (alternative backend) ----------
# gpui = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "6f6e5f30a5306a08e9a409ad39b9a0458f0ddf01", features = ["runtime_shaders", "macos-blade"] }
# gpui_macros = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "6f6e5f30a5306a08e9a409ad39b9a0458f0ddf01" }
# reqwest_client = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "6f6e5f30a5306a08e9a409ad39b9a0458f0ddf01" }
# sum_tree = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "6f6e5f30a5306a08e9a409ad39b9a0458f0ddf01" }

# ---------- Core Engine ----------
ui = { path = "crates/ui" }
gpui-component-macros = { path = "crates/macros" }
pulsar_std = { path = "crates/pulsar_std" }
blueprint_compiler = { path = "crates/blueprint_compiler" }

engine_backend = { path = "crates/engine_backend" }
engine_state   = { path = "crates/engine_state" }
engine_fs      = { path = "crates/engine_fs" }
type_db        = { path = "crates/type_db" }
profiling      = { path = "crates/profiling" }

# ---------- UI Component Crates ----------
ui_core            = { path = "ui-crates/ui_core" }
ui_entry           = { path = "ui-crates/ui_entry" }
ui_level_editor    = { path = "ui-crates/ui_level_editor" }
ui_settings        = { path = "ui-crates/ui_settings" }
ui_multiplayer     = { path = "ui-crates/ui_multiplayer" }
ui_problems        = { path = "ui-crates/ui_problems" }
ui_flamegraph      = { path = "ui-crates/ui_flamegraph" }
ui_file_manager    = { path = "ui-crates/ui_file_manager" }
ui_common          = { path = "ui-crates/ui_common" }
ui_loading_screen  = { path = "ui-crates/ui_loading_screen" }
ui_project_launcher= { path = "ui-crates/ui_project_launcher" }
ui_about           = { path = "ui-crates/ui_about" }
ui_documentation   = { path = "ui-crates/ui_documentation" }
ui_types_common    = { path = "ui-crates/ui_types_common" }
ui_type_debugger   = { path = "ui-crates/ui_type_debugger" }
ui_plugin_manager  = { path = "ui-crates/ui_plugin_manager" }
ui_log_viewer      = { path = "ui-crates/ui_log_viewer" }
ui_git_manager     = { path = "ui-crates/ui_git_manager" }

# ---------- Plugin System ----------
plugin_editor_api = { path = "crates/plugin_editor_api"}
plugin_manager    = { path = "crates/plugin_manager" }

# ---------- Helio Renderer (blade-graphics based) ----------
helio-core                       = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-render                     = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-features                   = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-feature-base-geometry      = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-feature-lighting           = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-feature-materials          = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-feature-procedural-shadows = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-feature-bloom              = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }
helio-feature-billboards         = { git = "https://github.com/Far-Beyond-Pulsar/Helio", rev = "03e1e3d9693329b2ea0c5367e648d45b2e04dde7" }

blade-graphics = { git = "https://github.com/tristanpoland/blade", rev = "d85bd14a78ed7729abc298906e87332257674a02"}
blade-macros   = { git = "https://github.com/tristanpoland/blade", rev = "d85bd14a78ed7729abc298906e87332257674a02"}
glam = { version = "0.29", features = ["bytemuck"] }

# ---------- Installer ----------
# Local rustup fork used as a library to drive platform-native Rust installation.
# curl-backend disabled: reqwest-native-tls is sufficient and avoids the curl C dep.
rustup = { git = "https://github.com/tristanpoland/rustup", default-features = false, features = ["reqwest-native-tls"] }

# ---------- Third-party ----------
wgpu = "0.20.1"
anyhow = "1.0.100"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.149"
schemars = "1.2.0"
smallvec = "1.15.1"
rust-i18n = "3.1.5"
raw-window-handle = "0.6.2"
winit = "0.30.12"
smol = "1.3.0"
tracing = "0.1.44"
notify = "8.2.0"
lsp-types = "0.97.0"
directories = "6.0.0"
itertools = "0.14.0"
rapier3d = { version = "0.32.0", features = ["simd-stable"] }
sysuri = "0.4.0"
urlencoding = "2.1.3"

ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16", "metric_lines_lf"] }

###################################
# Windows-specific
###################################

[workspace.dependencies.windows]
version = "0.62.2"
features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
]

###################################
# Clippy Lints
###################################

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
manual_is_multiple_of = "allow"
type_complexity = "allow"
todo = "deny"
style = { level = "allow", priority = -1 }

###################################
# Typos
###################################

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]
